--- a/turn/css/styles.css
+++ b/turn/css/styles.css
@@ -17,8 +17,27 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0; /* Agregado para asegurar que no haya relleno en el cuerpo */
+  padding: 0;
+  /* Agregado para asegurar que no haya relleno en el cuerpo */
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* No se permitirá la selección de texto */
 }
+
+.spin {
+  display: none;
+  /* Por defecto, ocultamos el spinner */
+}
+
 .logo-container {
   position: fixed;
   top: 0;
@@ -27,10 +46,13 @@ body {
 }
 
 .logo {
-  width: 25vw; /* Ajusta el tamaño del logo según tus necesidades */
+  width: 25vw;
+  /* Ajusta el tamaño del logo según tus necesidades */
 }
+
 header {
-  margin-bottom: 0; /* Agregado para asegurar que no haya margen inferior en el encabezado */
+  margin-bottom: 0;
+  /* Agregado para asegurar que no haya margen inferior en el encabezado */
 }
 
 
@@ -217,6 +239,7 @@ h3 {
   content: '\f26b';
   color: #333;
 }
+
 #loginButton {
   border: none;
   width: 173px;
@@ -227,7 +250,8 @@ h3 {
   align-items: center;
   justify-content: center;
   padding: 0;
-  background: #3ec3fd; /* Mismo color que el fondo del formulario */
+  background: #3ec3fd;
+  /* Mismo color que el fondo del formulario */
   color: #fff;
   text-transform: uppercase;
   font-family: "Gotham", sans-serif;
@@ -283,6 +307,7 @@ h3 {
   .wrapper {
     background-position: center center;
   }
+
   .inner {
     width: 50%;
   }
