--- a/turn/css/laptops.css
+++ b/turn/css/laptops.css
@@ -19,7 +19,7 @@
         left: 0;
         height: 100%;
         width: clamp(30px, 30vw, 80px);
-        background-color: #343a40;
+        background-color: #2c3136;
         padding-top: 20px;
         overflow-y: auto;
         overflow-x: hidden;
