--- a/turn/css/chats.css
+++ b/turn/css/chats.css
@@ -13,18 +13,23 @@ input[type="radio"] + label {
     box-sizing: border-box;
     background: #fff; /* Fondo blanco por defecto */
     transition: background-color 0.3s; /* Transición para el cambio de color de fondo */
-    display: flex; /* Usar flexbox */
+    display: inline-flex; /* Usar flexbox */
     align-items: center; /* Centrar verticalmente */
 }
 
 input[type="radio"] + label:before {
     content: "";
+    min-height: 20px;
+    min-width: 20px;
+    max-width: 20px;
+    max-height: 20px;
     width: 20px;
     height: 20px;
     margin-right: 0.5em;
     border: 2px solid #ccc;
     background: #fff;
     border-radius: 50%; /* Hacer un círculo */
+    display: inline-flex; /* Usar flexbox */
 }
 
 input[type="radio"]:checked + label {
@@ -96,4 +101,8 @@ input[type="radio"].Lejos:checked + label:before {
 
 #contenido {
     display: none; /* Oculta el segundo div por defecto */
+}
+
+.vr {
+    border-left: 2px solid #999999; /* Grosor y color de la línea */
 }
