--- a/turn/css/stylePdf.css
+++ b/turn/css/stylePdf.css
@@ -1,8 +1,79 @@
 .pdfview {
     margin: auto;
     display: block;
-    width: 40vw;
-    height: 50vh;
+    width: 55vw;
+    height: 60vh;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     /*zoom: 0.8;*/
+}
+
+.pdfPreView {
+    margin-left: -65px;
+    width: 120%;
+    height: 60vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#detallesButton {
+    border: none;
+    width: 173px;
+    height: 42px;
+    margin-top: 30px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background: #0072fd;
+    /* Mismo color que el fondo del formulario */
+    color: #fff;
+    text-transform: uppercase;
+    font-family: "Gotham", sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+
+#detallesButton span {
+    letter-spacing: 3px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#detallesButton:after {
+    content: attr(data-text);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 0;
+    opacity: 0;
+    letter-spacing: 3px;
+    -webkit-transform: translate(-30%, -25%);
+    transform: translate(-30%, -25%);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#detallesButton:hover {
+    /*background: #0072fd;*/
+    background: linear-gradient(to right, rgba(13, 77, 123), rgba(112, 89, 131));
+}
+
+#detallesButton:hover span {
+    opacity: 0;
+    -webkit-transform: translate(0px, 40px);
+    transform: translate(0px, 40px);
+}
+
+#detallesButton:hover:after {
+    opacity: 1;
+    -webkit-transform: translate(0, -25%);
+    transform: translate(0, -25%);
 }
